--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body, html {
 .app {
   display: flex;
   height: 100%;
+  overflow: hidden;
 }
 
 .server-list {
@@ -39,6 +40,7 @@ body, html {
   padding: 16px;
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
 
 .server-name {
